Replaced email client with resend api,  (#50)
