# docs/swagger.json
@@ -434,19 +434,19 @@
         "handlers.SignInReq": {
             "type": "object",
             "required": [
-                "password"
+                "password",
+                "username"
             ],
             "properties": {
-                "login": {
-                    "type": "string"
-                },
                 "password": {
                     "type": "string",
                     "maxLength": 64,
                     "minLength": 8
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 64,
+                    "minLength": 4
                 }
             }
         },
@@ -476,7 +476,8 @@
                     "minLength": 8
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 4
                 }
             }
         },
