# internal/handlers/model.go
@@ -10,8 +10,7 @@ const (
 
 // SignInReq represents user sign in request
 type SignInReq struct {
-	Username string `json:"username"`
-	Login    string `json:"login"`
+	Username string `json:"username" validate:"required,min=4,max=64"`
 	Password string `json:"password" validate:"required,min=8,max=64"`
 }
 
@@ -22,7 +21,7 @@ type TokenResp struct {
 
 // SignUpReq represents user sign up request
 type SignUpReq struct {
-	Username        string `json:"username" validate:"required,usernameregex"`
+	Username        string `json:"username" validate:"required,min=4,usernameregex"`
 	DisplayName     string `json:"name" validate:"required"`
 	Email           string `json:"email" validate:"omitempty,email"`
 	Password        string `json:"password" validate:"required,min=8,max=64"`
